Bug: Update the Web-Mobile-Tablet text to be a picture, adding correct spacing

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -46,7 +46,10 @@ background-repeat: repeat;}*/
     font-weight: normal;
     font-size: 13px;
 }
-
+.mobileweb{
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
 .img40{
     margin-top: 40px;
 }
